test/tests/errors/error-record-withdo-non-record.sm
// true
// false
// false
/**/
/**/

program {
    var person: string = "Tim";
    with person do
        output 1;
}